# TreeSimulator

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc  style.qss
src/: main.cpp
src/core/: AVLTree.cpp  AVLTree.h  BSTNode.h  BSTree.cpp  BSTree.h
src/gui/: EdgeItem.cpp  EdgeItem.h  MainWindow.cpp  MainWindow.h  NodeItem.cpp  NodeItem.h  PlusButtonItem.cpp  PlusButtonItem.h  TreeScene.cpp  TreeScene.h
